# rpcgen-multithreaded

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
src/: Makefile  Makefile.rdict  client_impl.h  menu.h  rdict.h  rdict.x  rdict_client.c  rdict_clnt.c  rdict_server.c  rdict_svc.c  rdict_xdr.c
